[package]
name = "ECCRust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
block-padding = { version = "0.3.3", features = ["std"] }
cbc = { version = "0.1.2", features = ["alloc"] }
cipher = { version = "0.4.4", features = ["std"] }
hex = "0.4.3"
rand = { version = "0.9.1", features = ["std"] }

